# security-module/src/main/java/com/mycard/security/domain/model/JwtInviteClaims.java
@@ -1,0 +1,13 @@
+package com.mycard.security.domain.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+import java.util.UUID;
+
+@Getter
+@AllArgsConstructor
+public class JwtInviteClaims {
+    private UUID trainerId;
+    private String email;
+}
